--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -6,57 +6,67 @@ permalink: /selectors
 
 <section style="height: 100vh;">
 
-  <div class="field">
-    <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
-    <div class="field__value">
-
-        <div class="selector selector--singleselect selector--expanded JS_selector">
-          <div class="selector__item JS_selectorItem selector__item--selected">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--field">Disagree</div>
-            </div>
-          </div>
-          <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem">
-            <div class="selector__block ">
-              <div class="selector__blockPart selector__blockPart--field">Agree</div>
-            </div>
+<!-- Field -->
+<div class="field field--tooltip">
+  <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
+  <div class="field__value">
+      <div class="selector selector--singleselect selector--expanded JS_selector">
+        <div class="selector__item JS_selectorItem selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">Disagree</div>
           </div>
         </div>
-
-        <div class="inline">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
-
-    </div>
-  </div>
-
-
-  <div class="field JS_field">
-    <div class="field__label">Email</div>
-    <div class="field__value">
-
-      <div class="selector selector--singleselect">
-        <div class="selector__item selector__item--selected JS_selectorItem">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--field">nick.de.jaeger@tenforce.com</div>
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item JS_selectorItem">
+          <div class="selector__block ">
+            <div class="selector__blockPart selector__blockPart--field">Agree</div>
           </div>
         </div>
       </div>
+      <div class="inline">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+  </div>
+</div>
 
-    </div>
+<!-- Popup -->
+<div class="multiSelector" id="multiSelector-privacy">
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--custom">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
 
-    <div class="note">
-      <p>Fill in a valid email address.</p>
+          <div class="note note--tooltip">
+            <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
+          </div>
+
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- Field -->
+<div class="field JS_field">
+  <div class="field__label">Email</div>
+  <div class="field__value">
+    <div class="selector selector--singleselect">
+      <div class="selector__item selector__item--selected JS_selectorItem">
+        <div class="selector__block">
+          <div class="selector__blockPart selector__blockPart--field">nick.de.jaeger@tenforce.com</div>
+        </div>
+      </div>
     </div>
   </div>
+  <div class="note">
+    <p>Fill in a valid email address.</p>
+  </div>
+</div>
 
 </section>
 
-
-
+<!-- Field -->
 <div class="field JS_field">
-  <div class="field__label JS_has-popup" data-popid="#multiSelector-tooltip">Assigned to </div>
+  <div class="field__label">Assigned to</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -64,10 +74,10 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
@@ -77,64 +87,78 @@ permalink: /selectors
 
 <h2>With popup</h2>
 
-<div class="field JS_field">
-  <div class="field__label">Due date</div>
-  <div class="field__value">
-
+<!-- Field -->
+<div class="field field--error JS_field">
+  <div class="field__label">Status</div>
+  <div class="field__value JS_has-popup JS_has-popup--error" data-popid="#ms-status">
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">11/17/2017</div>
+          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
+          <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
         </div>
       </div>
     </div>
-
   </div>
-
   <div class="note">
     <p>Actual invoice amount</p>
     <p>For fixed price projects and service requests (no <a href="#" class="link">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
   </div>
 </div>
 
-<div class="field field--error JS_field">
-  <div class="field__label">Status</div>
-  <div class="field__value JS_has-popup JS_has-popup--error" data-popid="#multiSelector-1">
-
-    <div class="selector selector--singleselect">
-      <div class="selector__item selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #ff9b9b;">ध</div>
-          <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+<!-- Popup -->
+<div class="multiSelector" id="ms-status">
+  <div class="itemBox JS_itemBox">
+    <ul class="itemBox__row">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <input type="search" class="JS_filterInput" placeholder="filter through items">
         </div>
-      </div>
-    </div>
-
+      </li>
+    </ul>
   </div>
-</div>
-
-<div class="field field--error JS_field">
-  <div class="field__label">Status</div>
-  <div class="field__value JS_has-popup" data-popid="#multiSelector-2">
-
-    <div class="selector selector--singleselect">
-      <div class="selector__item selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #ff9b9b;">ध</div>
-          <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--custom">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="note note--error">
+            <p>Item could not be selected. <a href="#">Read more</a></p>
+          </div>
         </div>
-      </div>
-    </div>
-
+      </li>
+    </ul>
+  </div>
+  <div class="itemBox JS_optionsChildren">
+    {% for item in site.data.multiselector-status.items %}
+      <ul class="itemBox__row itemBox__row--item JS_filterable">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__value">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        {% if item.selected == "true" %}
+          {% include javascript/itemSelected.html %}
+        {% endif %}
+      </ul>
+    {% endfor %}
   </div>
 </div>
 
 <h2>Without popup</h2>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Danger level</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -150,18 +174,17 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;">High</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;">High</div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Product contact</div>
   <div class="field__value">
-
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -172,26 +195,25 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
           <div class="selector__blockPart selector__blockPart--field">Brandbaar</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
           <div class="selector__blockPart selector__blockPart--field">Huidopname</div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -209,19 +231,18 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
           <div class="selector__blockPart selector__blockPart--field">Finished</div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags</div>
   <div class="field__value">
-
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -244,14 +265,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
@@ -274,14 +294,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
@@ -337,14 +356,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
-
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -358,14 +376,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -379,14 +396,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
-
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
         <div class="selector__block">
@@ -412,15 +428,14 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
 <h2>Read-only with ellipsis</h2>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__value">
-
     <div class="selector selector--expanded">
       <div class="selector__item selector__item--selected">
         <div class="selector__block">
@@ -431,15 +446,14 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
 <h2>Filters</h2>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__value">
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item selector__item--selected">
@@ -456,11 +470,9 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item selector__item--selected">
@@ -477,14 +489,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Description</div>
   <div class="field__value">
-
     <div class="selector selector--expanded" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item selector__item--selected">
@@ -493,11 +504,9 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item selector__item--selected">
@@ -506,14 +515,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags  Filter</div>
   <div class="field__value">
-
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item selector__item--selected">
@@ -530,11 +538,9 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
     <div class="selector selector--expanded JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
-
     <div class="selector selector--expanded JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item selector__item--selected">
@@ -551,14 +557,13 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Date  Filter</div>
   <div class="field__value">
-
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item selector__item--selected">
@@ -573,11 +578,9 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
-
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item selector__item--selected">
@@ -592,16 +595,15 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
 <h2>Tag Picker</h2>
 
+<!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags</div>
   <div class="field__value">
-
     <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
       <div class="selector__item selector__item--selected">
         <div class="selector__block">
@@ -616,14 +618,9 @@ permalink: /selectors
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
-{% include popups/ms-privacy.html %}
-{% include popups/ms-tooltip.html %}
-{% include popups/ms-status.html %}
-{% include popups/ms-status2.html %}
 {% include popups/multiSelector-tags-colors.html %}
 {% include popups/filter-tags.html%}
 {% include popups/filter-date.html%}
