--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: selectors
 title: Selectors
 permalink: /selectors
 ---
@@ -24,23 +24,6 @@ permalink: /selectors
         </div>
       </div>
       <div class="inline">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
-  </div>
-</div>
-
-<!-- Popup -->
-<div class="multiSelector" id="multiSelector-privacy">
-  <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-
-          <div class="note note--tooltip">
-            <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
-          </div>
-
-        </div>
-      </li>
-    </ul>
   </div>
 </div>
 
@@ -90,8 +73,8 @@ permalink: /selectors
 <!-- Field -->
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
-  <div class="field__value JS_has-popup JS_has-popup--error" data-popid="#ms-status">
-    <div class="selector selector--singleselect">
+  <div class="field__value">
+    <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
@@ -103,53 +86,6 @@ permalink: /selectors
   <div class="note">
     <p>Actual invoice amount</p>
     <p>For fixed price projects and service requests (no <a href="#" class="link">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
-  </div>
-</div>
-
-<!-- Popup -->
-<div class="multiSelector" id="ms-status">
-  <div class="itemBox JS_itemBox">
-    <ul class="itemBox__row">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <input type="search" class="JS_filterInput" placeholder="filter through items">
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="note note--error">
-            <p>Item could not be selected. <a href="#">Read more</a></p>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="itemBox JS_optionsChildren">
-    {% for item in site.data.multiselector-status.items %}
-      <ul class="itemBox__row itemBox__row--item JS_filterable">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__value">
-              <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
-                  <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
-                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        {% if item.selected == "true" %}
-          {% include javascript/itemSelected.html %}
-        {% endif %}
-      </ul>
-    {% endfor %}
   </div>
 </div>
 
@@ -620,10 +556,6 @@ permalink: /selectors
     </div>
   </div>
 </div>
-
-{% include popups/multiSelector-tags-colors.html %}
-{% include popups/filter-tags.html%}
-{% include popups/filter-date.html%}
 
 <script>
   checkEmptyFields();
