--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -48,13 +48,7 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__label">Email</div>
   <div class="field__value">
-    <div class="selector selector--singleselect">
-      <div class="selector__item selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">nick.de.jaeger@tenforce.com</div>
-        </div>
-      </div>
-    </div>
+    <input type="text" value="nick.de.jaeger@tenforce.com" class="field__input">
   </div>
   <div class="note">
     <p>Fill in a valid email address.</p>
@@ -62,6 +56,14 @@ permalink: /selectors
 </div>
 
 </section>
+
+
+
+
+
+
+
+
 
 <!-- Field -->
 <div class="field JS_field">
