--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -11,7 +11,7 @@ permalink: /selectors
   <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
   <div class="field__value">
       <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item JS_selectorItem selector__item--selected">
+        <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--field">Disagree</div>
           </div>
@@ -70,7 +70,7 @@ permalink: /selectors
   <div class="field__label">Assigned to</div>
   <div class="field__value">
     <div class="selector selector--singleselect">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">Nick De Jaeger</div>
         </div>
@@ -94,7 +94,7 @@ permalink: /selectors
   <div class="field__label">Status</div>
   <div class="field__value">
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
           <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
@@ -137,7 +137,7 @@ permalink: /selectors
           <div class="itemBox__cellInner">
             <div class="itemBox__value">
               <div class="selector selector--expanded">
-                <div class="selector__item selector__item--selected">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
@@ -162,7 +162,7 @@ permalink: /selectors
   <div class="field__label">Danger level</div>
   <div class="field__value">
     <div class="selector selector--singleselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">Low</div>
         </div>
@@ -188,7 +188,7 @@ permalink: /selectors
   <div class="field__label">Product contact</div>
   <div class="field__value">
     <div class="selector selector--multiselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">Heet</div>
@@ -217,7 +217,7 @@ permalink: /selectors
   <div class="field__label">Status</div>
   <div class="field__value">
     <div class="selector selector--singleselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Not started</div>
@@ -246,21 +246,21 @@ permalink: /selectors
   <div class="field__label">Tags</div>
   <div class="field__value">
     <div class="selector selector--multiselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">dev-team</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">297</div>
@@ -282,7 +282,7 @@ permalink: /selectors
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
@@ -310,7 +310,7 @@ permalink: /selectors
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
         </div>
@@ -366,13 +366,13 @@ permalink: /selectors
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
     <div class="selector selector--multiselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field"></div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field"></div>
         </div>
@@ -386,7 +386,7 @@ permalink: /selectors
   <div class="field__label">Checkbox</div>
   <div class="field__value">
     <div class="selector selector--singleselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix"></div>
         </div>
@@ -406,7 +406,7 @@ permalink: /selectors
   <div class="field__label">Checkbox</div>
   <div class="field__value">
     <div class="selector selector--singleselect selector--expanded JS_selector">
-      <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix"></div>
         </div>
@@ -439,7 +439,7 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__value">
     <div class="selector selector--expanded">
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--label">Label</div>
@@ -458,14 +458,14 @@ permalink: /selectors
   <div class="field__value">
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -477,14 +477,14 @@ permalink: /selectors
     </div>
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -500,7 +500,7 @@ permalink: /selectors
   <div class="field__value">
     <div class="selector selector--expanded" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">improvement</div>
         </div>
@@ -511,7 +511,7 @@ permalink: /selectors
     </div>
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">design</div>
         </div>
@@ -526,14 +526,14 @@ permalink: /selectors
   <div class="field__value">
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -545,14 +545,14 @@ permalink: /selectors
     </div>
     <div class="selector selector--expanded JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -568,13 +568,13 @@ permalink: /selectors
   <div class="field__value">
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
         </div>
@@ -585,13 +585,13 @@ permalink: /selectors
     </div>
     <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">today</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
         </div>
@@ -607,7 +607,7 @@ permalink: /selectors
   <div class="field__label">Tags</div>
   <div class="field__value">
     <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
-      <div class="selector__item selector__item--selected">
+      <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">282</div>
