--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -55,6 +55,100 @@ permalink: /selectors
   </div>
 </div>
 
+<!-- Field -->
+<div class="field field--error JS_field">
+  <div class="field__label">Status</div>
+  <div class="field__value">
+    <div class="inline secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+    <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
+      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+        <div class="selector__block">
+          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
+          <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="note">
+    <p>Actual invoice amount</p>
+    <p>For fixed price projects and service requests (no <a href="#" class="link">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
+  </div>
+</div>
+
+<!-- Popup -->
+<div class="multiSelector" id="ms-error">
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--custom">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="note note--error">
+            <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- Popup -->
+<div class="multiSelector animate--popup" id="ms-status">
+  <div class="itemBox JS_itemBox">
+    <ul class="itemBox__row">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <input type="search" class="JS_filterInput" placeholder="filter through items">
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--custom">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="note note--error">
+            <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="itemBox JS_optionsChildren">
+    {% for item in site.data.multiselector-status.items %}
+      <ul class="itemBox__row itemBox__row--item JS_filterable">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__value">
+              <div class="selector selector--expanded">
+                <div class="selector__item JS_selectorItem--active selector__item--selected">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        {% if item.selected == "true" %}
+          {% include javascript/itemSelected.html %}
+        {% endif %}
+      </ul>
+    {% endfor %}
+  </div>
+</div>
+
+<!-- Button -->
+<div>
+  <button class="push">Keep me in for 2 weeks</button>
+  <button class="push push--drop">Forget me tomorrow</button>
+</div>
+
+<!-- Button -->
+<div>
+  <button class="push push--go">Keep me in for 2 weeks</button>
+  <button class="push push--naked">Forget me tomorrow</button>
+</div>
+
 </section>
 
 
@@ -84,74 +178,6 @@ permalink: /selectors
   <div class="field__label">Assigned to</div>
   <div class="field__value">
     <input type="text" value="" class="field__input">
-  </div>
-</div>
-
-<h2>With popup</h2>
-
-<!-- Field -->
-<div class="field field--error JS_field">
-  <div class="field__label">Status</div>
-  <div class="field__value">
-    <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
-      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
-          <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="note">
-    <p>Actual invoice amount</p>
-    <p>For fixed price projects and service requests (no <a href="#" class="link">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
-  </div>
-</div>
-
-<!-- Popup -->
-<div class="multiSelector animate--popup" id="ms-status">
-  <div class="itemBox JS_itemBox">
-    <ul class="itemBox__row">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <input type="search" class="JS_filterInput" placeholder="filter through items">
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="note note--error">
-            <p>Item could not be selected. <a href="#">Read more</a></p>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="itemBox JS_optionsChildren">
-    {% for item in site.data.multiselector-status.items %}
-      <ul class="itemBox__row itemBox__row--item JS_filterable">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__value">
-              <div class="selector selector--expanded">
-                <div class="selector__item JS_selectorItem--active selector__item--selected">
-                  <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
-                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        {% if item.selected == "true" %}
-          {% include javascript/itemSelected.html %}
-        {% endif %}
-      </ul>
-    {% endfor %}
   </div>
 </div>
 
