--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -23,7 +23,7 @@ permalink: /selectors
           </div>
         </div>
       </div>
-      <div class="inline">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+      <div class="inline middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
   </div>
 </div>
 
@@ -138,15 +138,17 @@ permalink: /selectors
 </div>
 
 <!-- Button -->
-<div>
-  <button class="push">Keep me in for 2 weeks</button>
-  <button class="push push--drop">Forget me tomorrow</button>
+<div style="margin: 30px 10px;">
+  <button class="push"><span>Keep me in for 2 weeks</span></button>
+  <div class="inline baseline">or</div>
+  <button class="push push--drop"><span>forget me tomorrow</span></button>
 </div>
 
 <!-- Button -->
-<div>
-  <button class="push push--go">Keep me in for 2 weeks</button>
-  <button class="push push--naked">Forget me tomorrow</button>
+<div style="margin: 30px 10px;">
+  <button class="push push--go"><span>Keep me in for 2 weeks</span></button>
+  <div class="inline baseline">or</div>
+  <button class="push push--naked"><span>forget me tomorrow</span></button>
 </div>
 
 </section>
