--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -138,17 +138,17 @@ permalink: /selectors
 </div>
 
 <!-- Button -->
-<div style="margin: 30px 10px;">
-  <button class="push"><span>Keep me in for 2 weeks</span></button>
+<div class="buttons">
+  <button class="button"><span>Keep me in for 2 weeks</span></button>
   <div class="inline baseline">or</div>
-  <button class="push push--drop"><span>forget me tomorrow</span></button>
+  <button class="button button--drop"><span>forget me tomorrow</span></button>
 </div>
 
 <!-- Button -->
-<div style="margin: 30px 10px;">
-  <button class="push push--go"><span>Keep me in for 2 weeks</span></button>
+<div class="buttons">
+  <button class="button button--go"><span>Keep me in for 2 weeks</span></button>
   <div class="inline baseline">or</div>
-  <button class="push push--naked"><span>forget me tomorrow</span></button>
+  <button class="button button--naked"><span>forget me tomorrow</span></button>
 </div>
 
 </section>
