--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -8,6 +8,39 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field field--tooltip">
+  <div class="field__label">Test inline content</div>
+  <div class="field__value">
+
+      <div class="selector selector--singleselect selector--expanded JS_selector">
+        <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">Disagree</div>
+          </div>
+        </div>
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item JS_selectorItem">
+          <div class="selector__block ">
+            <div class="selector__blockPart selector__blockPart--field">Agree</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="inline middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+
+      <!-- Button -->
+      <button class="button button--go"><span>Keep me in for 2 weeks</span></button>
+      <div class="inline baseline">or</div>
+      <button class="button button--naked"><span>forget me tomorrow</span></button>
+
+      <div class="inline baseline"></div>
+
+      <div class="inline baseline">Lorem ipsum dolor sit amet</div>
+  </div>
+</div>
+
+
+<!-- Field -->
+<div class="field field--tooltip">
   <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
   <div class="field__value">
       <div class="selector selector--singleselect selector--expanded JS_selector">
