--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -32,7 +32,7 @@ permalink: /selectors
       <div class="inline baseline">or</div>
       <button class="button button--naked"><span>forget me tomorrow</span></button>
 
-      <div class="inline baseline"></div>
+      <div class="inline baseline"></div>
 
       <div class="inline baseline">Lorem ipsum dolor sit amet</div>
   </div>
