--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -92,11 +92,11 @@ permalink: /selectors
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <div class="inline secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+    <div class="inline baseline secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;">ध</div>
+          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;"></div>
           <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
         </div>
       </div>
@@ -104,7 +104,7 @@ permalink: /selectors
   </div>
   <div class="note">
     <p>Actual invoice amount</p>
-    <p>For fixed price projects and service requests (no <a href="#" class="link">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
+    <p>For fixed price projects and service requests (no <a href="#" class="link link--primary">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
   </div>
 </div>
 
