--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -28,9 +28,9 @@ permalink: /selectors
       <div class="inline middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
 
       <!-- Button -->
-      <button class="button button--go"><span>Keep me in for 2 weeks</span></button>
+      <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
       <div class="inline baseline">or</div>
-      <button class="button button--naked"><span>forget me tomorrow</span></button>
+      <button class="btn btn--naked"><span>forget me tomorrow</span></button>
 
       <div class="inline baseline"></div>
 
@@ -171,17 +171,17 @@ permalink: /selectors
 </div>
 
 <!-- Button -->
-<div class="buttons">
-  <button class="button"><span>Keep me in for 2 weeks</span></button>
+<div class="btns">
+  <button class="btn"><span>Keep me in for 2 weeks</span></button>
   <div class="inline baseline">or</div>
-  <button class="button button--drop"><span>forget me tomorrow</span></button>
+  <button class="btn btn--drop"><span>forget me tomorrow</span></button>
 </div>
 
 <!-- Button -->
-<div class="buttons">
-  <button class="button button--go"><span>Keep me in for 2 weeks</span></button>
+<div class="btns">
+  <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
   <div class="inline baseline">or</div>
-  <button class="button button--naked"><span>forget me tomorrow</span></button>
+  <button class="btn btn--naked"><span>forget me tomorrow</span></button>
 </div>
 
 </section>
