--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -4,40 +4,7 @@ title: Selectors
 permalink: /selectors
 ---
 
-<section style="height: 100vh;">
-
-<!-- Field -->
-<div class="field field--tooltip">
-  <div class="field__label">Test inline content</div>
-  <div class="field__value">
-
-      <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--field">Disagree</div>
-          </div>
-        </div>
-        <div class="selector__itemSeperator"></div>
-        <div class="selector__item JS_selectorItem">
-          <div class="selector__block ">
-            <div class="selector__blockPart selector__blockPart--field">Agree</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="inline middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
-
-      <!-- Button -->
-      <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
-      <div class="inline baseline">or</div>
-      <button class="btn btn--naked"><span>forget me tomorrow</span></button>
-
-      <div class="inline baseline"></div>
-
-      <div class="inline baseline">Lorem ipsum dolor sit amet</div>
-  </div>
-</div>
-
+<section style="min-height: 100vh;">
 
 <!-- Field -->
 <div class="field field--tooltip">
@@ -92,7 +59,7 @@ permalink: /selectors
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <div class="inline baseline secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+    <div class="inline-block middle secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -172,9 +139,9 @@ permalink: /selectors
 
 <!-- Button -->
 <div class="btns">
-  <button class="btn"><span>Keep me in for 2 weeks</span></button>
+  <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
   <div class="inline baseline">or</div>
-  <button class="btn btn--drop"><span>forget me tomorrow</span></button>
+  <button class="btn"><span>forget me tomorrow</span></button>
 </div>
 
 <!-- Button -->
